[package]
name = "expr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
getset = "0.1.3"
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = { version = "4.5.38", features = [] }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
meval = { version = "0.2.0", features = ["serde"] }
validator = { version = "0.19.0", features = ["derive"] }
